--- a/MMM-corona-dresden.css
+++ b/MMM-corona-dresden.css
@@ -1,3 +1,8 @@
+.MMM-corona-dresden .module-content {
+  	font-size: 22px;
+  	line-height: 25px;
+}
+
 .MMM-corona-dresden .danger {
     color: red;
 }
